--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -34,10 +34,12 @@
       2</a> (<a href="assignments/HW2-solns.pdf" target=
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW3.pdf" target="_blank">Homework
-      3</a> <!-- (<a href="assignments/HW3-solns.pdf" target=
-                   "_blank">Solutions</a>)</li> --></li>
+      3</a> (<a href="assignments/HW3-solns.pdf" target=
+      "_blank">Solutions</a>)</li>
       <li><a href="assignments/in-class-problems.pdf" target=
-      "_blank">In-class problem sheet</a></li>
+      "_blank">In-class problem sheet</a> (<a href=
+      "assignments/in-class-problems-solns.pdf" target=
+      "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW4.pdf" target="_blank">Homework
       4</a> <!-- (<a href="assignments/HW4-solns.pdf" target=
                         "_blank">Solutions</a>)</li> -->
