--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -24,6 +24,8 @@
     <ul>
       <li><a href="lectures/lecture-minus-1.pdf" target=
       "_blank">Slides from the introductory lecture</a></li>
+      <li><a href="lectures/lecture-18-oct-2023.pdf" target=
+      "_blank">Screens from 18th October's lecture</a></li>
     </ul><br>
     <h2>Assignments</h2>
     <ul>
