--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -44,19 +44,18 @@
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW4.pdf" target="_blank">Homework
       4</a> <!-- (<a href="assignments/HW4-solns.pdf" target=
-                        "_blank">Solutions</a>)</li> -->
-
-      <!-- <li><a href="assignments/HW6.pdf" target="_blank">Homework
-           6</a> (<a href="assignments/HW6-solns.pdf" target=
-           "_blank">Solutions</a>)</li>
-           <li><a href="assignments/HW7.pdf" target="_blank">Homework
-           7</a> (<a href="assignments/HW7-solns.pdf" target=
-           "_blank">Solutions</a>)</li>
-           <li><a href="assignments/HW8.pdf" target="_blank">Homework
-           8</a> (<a href="assignments/HW8-solns.pdf" target=
-           "_blank">Solutions</a>)</li>
-           <li><a href="assignments/all-HW-solns.pdf" target=
-           "_blank">All homework solutions as a single file</a></li> --></li>
+                        "_blank">Solutions</a>)</li> --></li>
+      <li><a href="assignments/HW5.pdf" target="_blank">Homework
+      5</a> <!-- (<a href="assignments/HW6-solns.pdf" target=
+                     "_blank">Solutions</a>) --></li>
+<!-- <li><a href="assignments/HW7.pdf" target="_blank">Homework
+             7</a> (<a href="assignments/HW7-solns.pdf" target=
+             "_blank">Solutions</a>)</li>
+             <li><a href="assignments/HW8.pdf" target="_blank">Homework
+             8</a> (<a href="assignments/HW8-solns.pdf" target=
+             "_blank">Solutions</a>)</li>
+             <li><a href="assignments/all-HW-solns.pdf" target=
+             "_blank">All homework solutions as a single file</a></li> -->
     </ul><br>
     <h2>Take-home tests</h2>
     <ul>
