math150: added HW4 solutions

--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -43,8 +43,8 @@
       "assignments/in-class-problems-solns.pdf" target=
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW4.pdf" target="_blank">Homework
-      4</a> <!-- (<a href="assignments/HW4-solns.pdf" target=
-                        "_blank">Solutions</a>)</li> --></li>
+      4</a> (<a href="assignments/HW4-solns.pdf" target=
+      "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW5.pdf" target="_blank">Homework
       5</a> <!-- (<a href="assignments/HW6-solns.pdf" target=
                      "_blank">Solutions</a>) --></li>
