--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -26,6 +26,8 @@
       "_blank">Slides from the introductory lecture</a></li>
       <li><a href="lectures/lecture-18-oct-2023.pdf" target=
       "_blank">Screens from 18th October's lecture</a></li>
+      <li><a href="lectures/lecture-n.pdf" target="_blank">Slides
+      from 20th November's lecture</a></li>
     </ul><br>
     <h2>Assignments</h2>
     <ul>
