math150: added th2

--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -65,8 +65,9 @@
     <h2>Take-home tests</h2>
     <ul>
       <li><a href="tests/TH1.pdf" target="_blank">Take-home test
-      1</a></li><!--     <li><a href="tests/TH2.pdf" target="_blank">Take-home test
-           2</a></li> -->
+      1</a></li>
+      <li><a href="tests/TH2.pdf" target="_blank">Take-home test
+      2</a></li>
     </ul><br>
     <h2>Exams</h2>
     <ul>
