--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -51,8 +51,8 @@
       5</a> (<a href="assignments/HW5-solns.pdf" target=
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW6.pdf" target="_blank">Homework
-      6</a> <!-- (<a href="assignments/HW6-solns.pdf" target=
-                     "_blank">Solutions</a>) --></li>
+      6</a> (<a href="assignments/HW6-solns.pdf" target=
+      "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW7.pdf" target="_blank">Homework
       7</a> <!-- (<a href="assignments/HW7-solns.pdf" target=
                    "_blank">Solutions</a>) --></li>
