math150: added hw7 solns

--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -54,8 +54,8 @@
       6</a> (<a href="assignments/HW6-solns.pdf" target=
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW7.pdf" target="_blank">Homework
-      7</a> <!-- (<a href="assignments/HW7-solns.pdf" target=
-                   "_blank">Solutions</a>) --></li>
+      7</a> (<a href="assignments/HW7-solns.pdf" target=
+      "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW8.pdf" target="_blank">Homework
       8</a> <!-- (<a href="assignments/HW8-solns.pdf" target=
                    "_blank">Solutions</a>) --></li>
