math150: added survey

--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -83,6 +83,9 @@
       <!-- <li><a href="tests/cheatsheet.pdf" target="_blank">Midterm
            cheatsheet</a></li> -->
     </ul>
+    <h2>Course survey</h2><a href=
+    "https://tinyurl.com/2s3kfmpk">Take the end-of-course survey
+    here</a>
   </main>
 </body>
 </html>
