math150: added practice exam

--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -73,10 +73,11 @@
     <h2>Exams</h2>
     <ul>
       <!-- <li><a href="tests/midterm.pdf" target="_blank">Midterm
-           exam</a></li>
-           <li><a href="tests/mock-exam.pdf" target="_blank">Practice
-           final exam</a> (<a href="tests/mock-exam-solns.pdf" target=
-           "_blank">Solutions</a>)</li> -->
+           exam</a></li> -->
+      <li><a href="tests/mock-exam.pdf" target="_blank">Practice
+      final exam</a>
+      <!-- (<a href="tests/mock-exam-solns.pdf" target=
+                            "_blank">Solutions</a>)</li> --></li>
     </ul><br>
     <h2>Cheat sheets</h2>
     <ul>
