math150: added final cheat sheet

--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -81,8 +81,8 @@
     </ul><br>
     <h2>Cheat sheets</h2>
     <ul>
-      <!-- <li><a href="tests/cheatsheet.pdf" target="_blank">Midterm
-           cheatsheet</a></li> -->
+      <li><a href="tests/cheatsheet.pdf" target="_blank">Final exam
+      cheatsheet</a></li>
     </ul>
     <h2>Course survey</h2><a href=
     "https://tinyurl.com/45y6akb6">Take the end-of-course survey
