updated contact and status to Chalmers

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
                  <a href="https://www.irif.fr//en/index">
                  IRIF</a>, Université Paris Diderot.
                  </p> -->
-        <p>I am a post-doc, working with <a href=
-        "https://home.sandiego.edu/~shulman/">Mike Shulman</a> at
-        the University of San Diego.</p>
-        <p>Here is a brief <a href=
+        <p>I am a post-doc, working with Christian Sattler at
+        Chalmers University in Gothenburg.</p>
+        <p>Here is a brief (and possibly slightly outdated) <a href=
         "https://gitlab.com/huevosybacon/cv-public/raw/master/cv.pdf?inline=false">
         CV</a>.</p>
         <h2>Writing</h2>
@@ -139,12 +138,12 @@
         <address>
             <dl>
                 <!-- <dt>Office 146</dt> -->
-                <dt>Department of Mathematics</dt>
-                <dt>Saints Tekakwitha and Serra Hall</dt>
-                <dt>University of San Diego</dt>
-                <dt>5998 Alcala Park, San Diego, CA 92110.</dt>
+                <dt>Computing Science</dt>
+                <dt></dt>
+                <dt>Chalmers University</dt>
+		<dt></dt>
             </dl>
-            <p>Email: cleenasubramaniam [at] sandiego [dot] edu</p>
+            <p>Email: leenac [at] chalmers [dot] se</p>
             <!-- <p> chaitanya [at] irif [dot] fr </p> -->
         </address>
         <p>This website is on <a href=
